# tlblur

./: .gitignore  .gitmodules  README.md  build.sh  configure_build.sh  meson-clang.ini  meson.build  meson.options  setup.md
benchmark/: Cargo.toml  meson.build
benchmark/include/: benchmark.h
benchmark/lib/: argon2.c  common.c  libjpeg.c  micro.c  openssl.c  rsa.c  wolfssl.c  yescrypt.c
benchmark/src/: main.rs
enclaves/: common.edl  meson.build  tlblur.ld
enclaves/argon2/: main.c  meson.build
enclaves/argon2/Enclave/: encl.c  encl.edl
enclaves/argon2/Enclave/argon2/: argon2  bench  meson.build
enclaves/argon2/Enclave/argon2/src/: encoding.c
enclaves/common/: cacheutils.h  debug.h  ecalls.c  meson.build  ocalls.c  pf.c  pf.h
enclaves/libjpeg/: main.c  meson.build  testimg-out-color.ppm  testimg-reconstruct-channel-1-gray.pgm  testimg-reconstruct-color.ppm
enclaves/libjpeg/Enclave/: .gitignore  Makefile  asm.S  encl.c  encl.config.xml  encl.edl  encl.s
enclaves/libjpeg/Enclave/jpeg-9e/: Makefile  jconfig.h  jdatadst.c  jdatasrc.c  jdcoefct.c  jerror.c  jidctint.c  jmemsys.h  jmorecfg.h  jpeglib.h  meson.build
enclaves/micro/: hist.py  main.c  meson.build  micro_stressmem_baseline.txt  micro_stressmem_inline.txt  micro_stressmem_outline.txt  micro_stressmem_outline_empty.txt  micro_stressmem_outline_nobranch.txt  micro_stressmem_outline_nocounter.txt  micro_stressmem_outline_novtlbstore.txt  micro_stressmem_outline_pushpop.txt  micro_stressmem_outline_pushpopflags.txt
enclaves/micro/Enclave/: code.S  encl.c  encl.edl
enclaves/openssl/: main.c  meson.build
enclaves/openssl/Enclave/: encl.c  encl.edl
enclaves/rsa/: main.c  meson.build
enclaves/rsa/Enclave/: asm.S  encl.c  encl.edl
enclaves/simple/: main.c  meson.build
enclaves/simple/Enclave/: asm.S  encl.c  encl.config.xml  encl.edl
enclaves/tcommon/: ecalls.c  meson.build
enclaves/wolfssl/: meson.build
enclaves/wolfssl/Enclave/: encl.c  encl.edl  meson.build
enclaves/yescrypt/: meson.build
enclaves/yescrypt/Enclave/: .buildenv  encl.c  encl.edl
enclaves/yescrypt/Enclave/yescrypt/: meson.build  yescrypt-opt.c  yescrypt-platform.c
evaluation/: .csv  plot.py  run_benchmarks.sh
llvm/: llvm-configure.sh  llvm-install.sh  tlblur-llvm.patch
prefetch-benchmark/: .gitignore  Makefile  main.c  plot.py  run.sh
prefetch-benchmark/Enclave/: Makefile  asm.S  encl.c  encl.config.xml  encl.edl
prefetcher/: tlblur.h
profiler/: libjpeg.c  meson.build  micro.c  openssl.c  profiler.h  rsa.c  wolfssl.c  yescrypt.c
runtime/: meson.build  tlblur.S
traces/: lzc.py  plot.py  read_vcd.py  transform_numpy.py
