wolfssl_sources = files(
  'wolfssl/wolfcrypt/src/aes.c',
  'wolfssl/wolfcrypt/src/aes_asm.S',
	'wolfssl/wolfcrypt/src/arc4.c',
	'wolfssl/wolfcrypt/src/asn.c',
	'wolfssl/wolfcrypt/src/blake2b.c',
	'wolfssl/wolfcrypt/src/camellia.c',
	'wolfssl/wolfcrypt/src/coding.c',
	'wolfssl/wolfcrypt/src/chacha.c',
	'wolfssl/wolfcrypt/src/chacha20_poly1305.c',
	'wolfssl/src/crl.c',
	'wolfssl/wolfcrypt/src/des3.c',
	'wolfssl/wolfcrypt/src/dh.c',
	'wolfssl/wolfcrypt/src/tfm.c',
	'wolfssl/wolfcrypt/src/ecc.c',
	'wolfssl/wolfcrypt/src/error.c',
	'wolfssl/wolfcrypt/src/hash.c',
	'wolfssl/wolfcrypt/src/kdf.c',
	'wolfssl/wolfcrypt/src/hmac.c',
	'wolfssl/wolfcrypt/src/integer.c',
	'wolfssl/src/internal.c',
	'wolfssl/src/wolfio.c',
	'wolfssl/src/keys.c',
	'wolfssl/wolfcrypt/src/logging.c',
	'wolfssl/wolfcrypt/src/md4.c',
	'wolfssl/wolfcrypt/src/md5.c',
	'wolfssl/wolfcrypt/src/memory.c',
	'wolfssl/src/ocsp.c',
	'wolfssl/wolfcrypt/src/pkcs7.c',
	'wolfssl/wolfcrypt/src/pkcs12.c',
	'wolfssl/wolfcrypt/src/poly1305.c',
	'wolfssl/wolfcrypt/src/wc_port.c',
	'wolfssl/wolfcrypt/src/wolfmath.c',
	'wolfssl/wolfcrypt/src/pwdbased.c',
	'wolfssl/wolfcrypt/src/random.c',
	'wolfssl/wolfcrypt/src/ripemd.c',
	'wolfssl/wolfcrypt/src/rsa.c',
	'wolfssl/wolfcrypt/src/dsa.c',
	'wolfssl/wolfcrypt/src/sha.c',
	'wolfssl/wolfcrypt/src/sha256.c',
	'wolfssl/wolfcrypt/src/sha512.c',
	'wolfssl/wolfcrypt/src/signature.c',
	'wolfssl/wolfcrypt/src/sp_c32.c',
	'wolfssl/wolfcrypt/src/sp_c64.c',
	'wolfssl/wolfcrypt/src/sp_int.c',
	'wolfssl/src/ssl.c',
	'wolfssl/src/tls.c',
	'wolfssl/wolfcrypt/src/wc_encrypt.c',
	'wolfssl/wolfcrypt/src/wolfevent.c',
)

wolfssl_include = include_directories('.', 'wolfssl', 'wolfssl/wolfcrypt')
