###########
# libjpeg #
###########

libjpeg_sources_common = files('jaricom.c', 'jcomapi.c', 'jutils.c', 'jerror.c', 'jmemmgr.c', 'jmemnobs.c')
libjpeg_sources_compression = files(
  'jcapimin.c', 'jcapistd.c', 'jcarith.c', 'jctrans.c', 'jcparam.c',
  'jcinit.c', 'jcmaster.c', 'jcmarker.c', 'jcmainct.c', 'jcprepct.c',
  'jccoefct.c', 'jccolor.c', 'jcsample.c', 'jchuff.c', 'jcdctmgr.c', 'jfdctfst.c',
  'jfdctflt.c', 'jfdctint.c'
)
libjpeg_sources_decompression = files(
  'jdapimin.c', 'jdapistd.c', 'jdarith.c', 'jdtrans.c', 
  'jdmaster.c', 'jdinput.c', 'jdmarker.c', 'jdhuff.c', 'jdmainct.c', 'jdatadst.c', 'jdatasrc.c', 
  'jdcoefct.c', 'jdpostct.c', 'jddctmgr.c', 'jidctfst.c', 'jidctflt.c', 
  'jidctint.c', 'jdsample.c', 'jdcolor.c', 'jquant1.c', 'jquant2.c', 'jdmerge.c',
)
